<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.levelup.bibangamba.githubusers.view.UserListActivity">

    <ProgressBar
        android:id="@+id/github_users_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/github_users_swipe_refresh_layout" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/github_users_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/recyclerview" />

    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.constraint.ConstraintLayout>
