<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.levelup.bibangamba.githubusers.model.GithubUser" />

        <import type="com.levelup.bibangamba.githubusers.listgithubusers.GithubUsersContract.View" />

        <import type="java.util.List" />

        <import type="android.os.Parcelable" />

        <variable
            name="githubUsers"
            type="List&lt;GithubUser>" />

        <variable
            name="githubUsersView"
            type="View" />

        <variable
            name="listState"
            type="Parcelable" />
    </data>

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:githubUsers="@{githubUsers}"
        app:githubUsersView="@{githubUsersView}"
        app:restoreListStateAdapter="@{listState}"
        tools:layoutManager="android.support.v7.widget.GridLayoutManager"
        tools:listitem="@layout/github_user_grid_item"
        tools:spanCount="2" />

</layout>
