...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="@{userViewModel.imageVisibility ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/usernameTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/profilePictureImageView"
            app:layout_constraintTop_toTopOf="@+id/profilePictureImageView" />

        <ImageView
            android:id="@+id/profilePictureImageView"
...
